Update readme and license