@@ -1,46 +1,86 @@
-## A Starter Game Template for the LittleKt Game Framework
+# Neon Ghost
 
-This template repository contains a base project for creating games with [LittleKt](https://littlekt.com). It contains
-the bare necessities to get a LittleKt project up and running. This includes the necessary plugins, dependencies and
-source set structure.
+A classic 2D beat 'em up adventure made in 1 month for [Magical Girl Game Jam #10](https://itch.io/jam/magical-girl-game-jam-10).
 
-This project is set up to use all the available platforms that LittleKt currently supports: **JVM**, **Web**, and *
-*Android**.
-If a certain platform isn't needed, simply deleting the source directory and the source sets in
-the `build.gradle.kts` file will get rid of it.
+[Check it on itch.io](https://mattemade.itch.io/neon-ghost)
 
-## Usage
+Source license terms:
 
-Clone this repo and open up in IntelliJ to get started. Each platform target contains a class to execute for their
-respective platform.
+* all the code is licensed under [Apache 2.0](LICENSE-CODE.txt)
+* voice recordings from [sound/Misc](game%2Fsrc%2FcommonMain%2Fresources%2Fsound%2FMisc) are licensed under [CC0](LICENSE-VOICE.txt)
+* music, sounds and graphic assets: TBC 
 
-### JVM
+The team behind the game:
 
-#### Running
+* maschiaT ([itch](https://maschiat.itch.io/), [website](https://maschiat.carrd.co/)): character
+  sprites ([Rei](game%2Fsrc%2FcommonMain%2Fresources%2Ftexture%2Frei%2Fnormal%2Fsheet.png), [Magical Rei](game%2Fsrc%2FcommonMain%2Fresources%2Ftexture%2Frei%2Fmagical%2Fsheet.png), [Ghost](game%2Fsrc%2FcommonMain%2Fresources%2Ftexture%2Fghost%2Fgray%2Fsheet.png), [Punk](game%2Fsrc%2FcommonMain%2Fresources%2Ftexture%2Fpunk%2Fsheet.png), [Guard](game%2Fsrc%2FcommonMain%2Fresources%2Ftexture%2Fguard%2Fsheet.png), [Officer](game%2Fsrc%2FcommonMain%2Fresources%2Ftexture%2Fofficer%2Fsheet.png)), [character portraits](game%2Fsrc%2FcommonMain%2Fresources%2Ftexture%2Fportrait)
+  level
+  objects ([washing machine](game%2Fsrc%2FcommonMain%2Fresources%2Ftexture%2Fobject%2Fmachine.png), [terminal](game%2Fsrc%2FcommonMain%2Fresources%2Ftexture%2Fobject%2Fterminal.png), [power plant](game%2Fsrc%2FcommonMain%2Fresources%2Ftexture%2Fobject%2Fplant.png)) [street tiles](game%2Fsrc%2FcommonMain%2Fresources%2Flevel%2FOutside-Wall%2048_48.png), [facility indoor tiles](game%2Fsrc%2FcommonMain%2Fresources%2Flevel%2Ftilesets%2F0_Asset_Wall_144144.png), [rooftop tiles](game%2Fsrc%2FcommonMain%2Fresources%2Flevel%2Ftilesets%2F0_Asset_Tile02_144144-Sheet-Sheet.png), [floor tiles](game%2Fsrc%2FcommonMain%2Fresources%2Flevel%2Ftilesets%2F0_Asset_Floor_4848.png)
+* nicole
+  starlight ([itch](https://nicolestarlight.itch.io/), [soundcloud](https://soundcloud.com/nicolestarlight), [linktree](https://linktr.ee/nicolestarlight)): [music](game%2Fsrc%2FcommonMain%2Fresources%2Fmusic)
+* OD.MP3 ([itch](https://overdosemp3.itch.io/), [x](https://x.com/mp3overdose), [website](https://overdose.uwu.ai/)): [voice over](game%2Fsrc%2FcommonMain%2Fresources%2Fsound%2FMisc)
+* M for Mediocre ([itch](https://m-for-mediocre.itch.io/), [website](https://mformarker.github.io/markmyskov/index.html)): most of [the sound effects](game%2Fsrc%2FcommonMain%2Fresources%2Fsound)
+* matte ([itch](https://mattemade.itch.io/)): everything else
+    * game design in [Krita](https://github.com/KDE/krita), [GIMP](https://github.com/GNOME/gimp) and Google Docs
+    * programming in Android Studio using [my custom fork](https://github.com/mattemade/littlekt-lg-ex)
+      of [LittleKT framework](https://github.com/littlektframework/littlekt)
+    * writing the script with [Notepad++](https://github.com/notepad-plus-plus/notepad-plus-plus)
+    * making levels in [Tiled editor](https://github.com/mapeditor/tiled)
+    * audio editing of [5_d.wav](game%2Fsrc%2FcommonMain%2Fresources%2Fsound%2FMisc%2F5_d.wav)
+      and [6_d.wav](game%2Fsrc%2FcommonMain%2Fresources%2Fsound%2FMisc%2F6_d.wav)
+      with [Audacity](https://github.com/audacity/audacity)
+    * sound
+      effects: [text voices](game%2Fsrc%2FcommonMain%2Fresources%2Fsound%2Fvoice), [jetpack](game%2Fsrc%2FcommonMain%2Fresources%2Fsound%2Fjetpack.wav), [magic jetpack](game%2Fsrc%2FcommonMain%2Fresources%2Fsound%2Fmagic_jetpack.wav), [AOE splash](game%2Fsrc%2FcommonMain%2Fresources%2Fsound%2FPunches%2Fsplash.wav), [ghost AOE splash](game%2Fsrc%2FcommonMain%2Fresources%2Fsound%2FPunches%2Fghost_splash.wav), [lightning](game%2Fsrc%2FcommonMain%2Fresources%2Fsound%2FPunches%2Flightning.wav)
+      with [LMMS](https://github.com/LMMS/lmms)
+    * music for [the intro training](game%2Fsrc%2FcommonMain%2Fresources%2Fmusic%2Fbassy_beat.mp3)
+      with [LMMS](https://github.com/LMMS/lmms)
+    * editing tilesets [of street](game%2Fsrc%2FcommonMain%2Fresources%2Flevel%2FOutside-Wall%2048_48.png) (to add isometric bricks), [rooftop](game%2Fsrc%2FcommonMain%2Fresources%2Flevel%2Ftilesets%2F0_Asset_Tile02_144144-Sheet-Sheet.png) (to make it 48x48-friendly), [floor](game%2Fsrc%2FcommonMain%2Fresources%2Flevel%2Ftilesets%2F0_Asset_Floor_4848.png) (to make it darker), different door tiles (to make them transparent or change color)
+      with [GIMP](https://github.com/GNOME/gimp)
+    * creating temporary tilesets that made it into the final game for [boxing club floor](game%2Fsrc%2FcommonMain%2Fresources%2Flevel%2Ftilesets%2Fperspective_floor_tile.png), [wooden doors](game%2Fsrc%2FcommonMain%2Fresources%2Flevel%2Ftilesets%2Fwooden_doors.png), [Rei's home](game%2Fsrc%2FcommonMain%2Fresources%2Flevel%2Ftilesets%2Frei_home_tiles.png), [anything else](game%2Fsrc%2FcommonMain%2Fresources%2Flevel%2Fabstract.png) with [Krita](https://github.com/KDE/krita) and [GIMP](https://github.com/GNOME/gimp)
+    * creating temporary sprites
+      for [training dummy](game%2Fsrc%2FcommonMain%2Fresources%2Ftexture%2Fdummy%2Fsheet.png), [handcuffed Rei](game%2Fsrc%2FcommonMain%2Fresources%2Ftexture%2Frei%2Fnormal%2Fsheet.png), [ghost AOE attack](game%2Fsrc%2FcommonMain%2Fresources%2Ftexture%2Fghost%2Faoe), [magical Rei attacks](game%2Fsrc%2FcommonMain%2Fresources%2Ftexture%2Frei%2Faoe), [hacking tools](game%2Fsrc%2FcommonMain%2Fresources%2Ftexture%2Fobject%2Ftools.png), [city view](game%2Fsrc%2FcommonMain%2Fresources%2Ftexture%2Fmisc%2Fcity.png), [clouds](game%2Fsrc%2FcommonMain%2Fresources%2Ftexture%2Fmisc%2Fclouds.png), [jetpack](game%2Fsrc%2FcommonMain%2Fresources%2Ftexture%2Fobject%2Fjetpack.png), [area map 1](game%2Fsrc%2FcommonMain%2Fresources%2Flevel%2Ftilesets%2Farea_map_1.png), [area map 2.png](game%2Fsrc%2FcommonMain%2Fresources%2Flevel%2Ftilesets%2Farea_map_2.png), [facility scheme](game%2Fsrc%2FcommonMain%2Fresources%2Flevel%2Ftilesets%2Fbuilding_map.png)  
+      with [Krita](https://github.com/KDE/krita) and [GIMP](https://github.com/GNOME/gimp)
+    * [font design](game%2Fsrc%2FcommonMain%2Fresources%2Ftexture%2Fdialogue%2Ffont_white.png) and temporary UI design
 
-Run `LwjglApp` to execute on the desktop.
+Useful links:
 
-#### Deploying
+* [working document](https://docs.google.com/document/d/1mZCCfTkuXQmEVjmshbjJ76JdNbgqRMprXwtz-WtU0xI/edit)
+* (everything else is included withing the repo ¦3)
+* [original game storyboard](full_game_so_far.png)
+* [itch page idea](itch_page_idea.png)
+* [latest script](neon_ghost_full_text_script.txt)
+* project structure is based on
+  a [starter Game Template for the LittleKt Game Framework](https://github.com/littlektframework/littlekt-game-template)
 
-A custom deploy task is created specifically for JVM. Run the `package/packageFatJar` gradle task to create a fat
-executable JAR. This task can be tinkered with in the `build.gradlek.kts` file.
+### Notes for myself
 
-If and when the packages are renamed from `com.game.template.LwjglApp` to whatever, ensure to update the `jvm.mainClass`
-property in the `gradle.properties` file to ensure that the `packageFatJar` task will work properly.
+#### How to build
 
-A jar will be outputted in the build directory. To run this JAR, use the following
-command, replacing the name of the JAR, if needed: `java -jar --enable-preview game-1.0-all.jar`
+* fetch [the OpenGL branch](https://github.com/mattemade/littlekt-lg-ex/tree/opengl)
+  of [littlekt-lg-ex](https://github.com/mattemade/littlekt-lg-ex) (fork
+  of [LittleKT](https://github.com/littlektframework/littlekt))
+* build and publish a local maven version with `gradlew publishToMavenLocal`
+* check the version in `~/.m2/repository/com/littlekt/core/`
+* update the [`libs.versions.toml`](gradle%2Flibs.versions.toml)` to include that version of littleKt
+* to run a JS version: `gradlew jsBrowserDevelopmentRun`
+* to build a JS distribution: `gradlew jsBrowserDistribution`
+* to run a JVM version (may crash or be too loud due to audio
+  incompatibilities): `gradlew jvmRun -DmainClass=io.itch.mattemade.neonghost.LwjglAppKt --quiet`
 
-If you are running on Mac OS, then the following command can be
-used: `java -jar -XstartOnFirstThread --enable-preview game-1.0-all.jar`
+#### How to record 640x480 gameplay video
 
-### JS
+* disable the blur callback in [JsApp.kt](game%2Fsrc%2FjsMain%2Fkotlin%2Fio%2Fitch%2Fmattemade%2Fneonghost%2FJsApp.kt)
+* in OBS, setup video canvas to 1280x960, and video output to 640x480
+* run the JS version locally in a separate window
+* open the dev tools by F12, and adjust its size so the game will take exactly 512px (as I have 2.5x scaling, so
+  1280/2.5 = 512)
+* in OBS, add a window capture, and try to adjust its position so that game fits the viewport
+* record it that way
 
-#### Running
+#### How to turn a record into a gif for itch.io
 
-Run the `kotlin browser/jsBrowserRun` gradle task like any other **Kotlin/JS** project to run in development mode.
-
-#### Deploying
-
-Run the `kotlin browser/jsBrowserDistribution` gradle task to create a distribution build. This build will require a
-webserver in order to run.
+* `ffmpeg -ss 3 -to 7 -i "input.mp4" -filter_complex "fps=20:-1[s]; [s]split[a][b]; [a]palettegen[palette]; [b][palette]paletteuse" "output.gif"`
+* `-ss` defines the start of the converted segment in seconds from the beginning, `-to` defines the end of the converted
+  segment in seconds from the beginning
+* adjust the `fps` and length so that the file size is smaller than 3000 Kb
+* maybe remove the cabinet filter for gifs? should save a lot of palette colors
